k8s/1-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: testapp
    labels:
        app: testapp
spec:
    nodeSelector:
        "kubernetes.io/os": linux
    containers:
        - name: testapp
          image: acrsamplek8s.azurecr.io/testapp:1.1
          resources:
              limits:
                  memory: "128Mi"
                  cpu: "500m"
          ports:
              - containerPort: 80
                name: http
          readinessProbe:
              httpGet:
                  path: /health
                  port: 80
              periodSeconds: 3
              timeoutSeconds: 1
