k8s/testapp-aci-secrets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: testapp-aci-secrets
spec:
    replicas: 1
    selector:
        matchLabels:
            app: testapp-aci-secrets
    template:
        metadata:
            labels:
                app: testapp-aci-secrets
        spec:
            nodeSelector:
                kubernetes.io/os: linux
            containers:
                - name: testapp-aci-enforce-secret
                  image: busybox:latest
                  command:
                    - /bin/sh
                    - -c
                    - |
                      trap : TERM INT
                      sleep 9999999999d & wait
                  resources:
                      requests:
                          cpu: 50m
                          memory: 50Mi
                      limits:
                          cpu: 50m
                          memory: 50Mi
                  volumeMounts:
                      - name: keyvault-secrets
                        mountPath: "/mnt/keyvault-secrets"
                        readOnly: true
            volumes:
                - name: keyvault-secrets
                  csi:
                      driver: secrets-store.csi.k8s.io
                      readOnly: true
                      volumeAttributes:
                          secretProviderClass: "keyvault-secrets-provider-aci"
